fix some spacing on resume

--- a/src/terminal-demo/resume.css
+++ b/src/terminal-demo/resume.css
@@ -27,7 +27,7 @@
   max-width: 800px;
   min-width: 210px;
   background-color: #edece0;
-  padding: 30px 5% 10px;
+  padding: 35px 5% 10px;
   text-align: left;
 }
 
